- add sticky header - bug: scrollbar content shift Waheguru Ji !

--- a/assets/main.css
+++ b/assets/main.css
@@ -6,3 +6,19 @@
 .page-leave-to {
   opacity: 0;
 }
+
+html {
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+}
